--- a/src/index.css
+++ b/src/index.css
@@ -30,6 +30,7 @@ code {
   --color-tertiary-dark: #C87800;
 
   --color-black: #000000;
+  --color-white: #FFFFFF;
 
   --color-grey: #696969;
   --color-grey-ligth: #eeeeee;
